Bump to version 0.3. Everything is working, small rewrite of Lua lexer to support libGDX API. Also, fixed Lua to Java method parameters passing, was broken for strings and numbers